LAB3/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions -> instruction
Rule 5     instructions -> instructions instruction
Rule 6     instruction -> expr ;
Rule 7     instruction -> block_stmt
Rule 8     instruction -> print_stmt
Rule 9     instruction -> flow_stmt
Rule 10    instruction -> for_stmt
Rule 11    instruction -> while_stmt
Rule 12    instruction -> if_stmt
Rule 13    instruction -> assignment
Rule 14    flow_stmt -> RETURN expr ;
Rule 15    flow_stmt -> RETURN ;
Rule 16    flow_stmt -> CONTINUE ;
Rule 17    flow_stmt -> BREAK ;
Rule 18    if_stmt -> IF ( expr ) instruction  [precedence=nonassoc, level=1]
Rule 19    if_stmt -> IF ( expr ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 20    while_stmt -> WHILE ( expr ) instruction
Rule 21    for_interval -> INTNUM
Rule 22    for_interval -> ID
Rule 23    for_stmt -> FOR ID = for_interval : for_interval instruction
Rule 24    block_stmt -> { instructions }
Rule 25    print_stmt -> PRINT expr_list ;
Rule 26    assignment -> lvalue DIVASSIGN expr ;
Rule 27    assignment -> lvalue MULASSIGN expr ;
Rule 28    assignment -> lvalue SUBASSIGN expr ;
Rule 29    assignment -> lvalue ADDASSIGN expr ;
Rule 30    assignment -> lvalue = expr ;
Rule 31    lvalue -> ID [ expr_list ]
Rule 32    lvalue -> ID
Rule 33    expr -> SUB expr  [precedence=right, level=8]
Rule 34    expr -> ONES ( expr_list )
Rule 35    expr -> ZEROS ( expr_list )
Rule 36    expr -> EYE ( expr_list )
Rule 37    expr -> expr '  [precedence=left, level=9]
Rule 38    expr -> matrix
Rule 39    expr -> STRING
Rule 40    expr -> FLOAT
Rule 41    expr -> INTNUM
Rule 42    expr -> ID
Rule 43    expr -> ( expr )
Rule 44    expr -> expr GE expr  [precedence=nonassoc, level=3]
Rule 45    expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 46    expr -> expr LE expr  [precedence=nonassoc, level=3]
Rule 47    expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 48    expr -> expr NE expr  [precedence=nonassoc, level=3]
Rule 49    expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 50    expr -> expr DOTDIV expr  [precedence=left, level=7]
Rule 51    expr -> expr DOTMUL expr  [precedence=left, level=7]
Rule 52    expr -> expr DOTSUB expr  [precedence=left, level=6]
Rule 53    expr -> expr DOTADD expr  [precedence=left, level=6]
Rule 54    expr -> expr DIVIDE expr  [precedence=left, level=5]
Rule 55    expr -> expr MUL expr  [precedence=left, level=5]
Rule 56    expr -> expr SUB expr  [precedence=left, level=4]
Rule 57    expr -> expr ADD expr  [precedence=left, level=4]
Rule 58    expr_list -> expr_list , expr
Rule 59    expr_list -> expr
Rule 60    matrix -> [ row_list ]
Rule 61    row_list -> row_list ; row
Rule 62    row_list -> row
Rule 63    row -> expr_list

Terminals, with rules where they appear:

'                    : 37
(                    : 18 19 20 34 35 36 43
)                    : 18 19 20 34 35 36 43
,                    : 58
:                    : 23
;                    : 6 14 15 16 17 25 26 27 28 29 30 61
=                    : 23 30
ADD                  : 57
ADDASSIGN            : 29
BREAK                : 17
CONTINUE             : 16
DIVASSIGN            : 26
DIVIDE               : 54
DOTADD               : 53
DOTDIV               : 50
DOTMUL               : 51
DOTSUB               : 52
ELSE                 : 19
EQ                   : 49
EYE                  : 36
FLOAT                : 40
FOR                  : 23
GE                   : 44
GT                   : 45
ID                   : 22 23 31 32 42
IF                   : 18 19
INTNUM               : 21 41
LE                   : 46
LT                   : 47
MUL                  : 55
MULASSIGN            : 27
NE                   : 48
ONES                 : 34
PRINT                : 25
RETURN               : 14 15
STRING               : 39
SUB                  : 33 56
SUBASSIGN            : 28
WHILE                : 20
ZEROS                : 35
[                    : 31 60
]                    : 31 60
error                : 
{                    : 24
}                    : 24

Nonterminals, with rules where they appear:

assignment           : 13
block_stmt           : 7
expr                 : 6 14 18 19 20 26 27 28 29 30 33 37 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59
expr_list            : 25 31 34 35 36 58 63
flow_stmt            : 9
for_interval         : 23 23
for_stmt             : 10
if_stmt              : 12
instruction          : 4 5 18 19 19 20 23
instructions         : 3 5 24
instructions_opt     : 1
lvalue               : 26 27 28 29 30
matrix               : 38
print_stmt           : 8
program              : 0
row                  : 61 62
row_list             : 60 61
while_stmt           : 11


state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> .
    (3) instructions_opt -> . instructions
    (4) instructions -> . instruction
    (5) instructions -> . instructions instruction
    (6) instruction -> . expr ;
    (7) instruction -> . block_stmt
    (8) instruction -> . print_stmt
    (9) instruction -> . flow_stmt
    (10) instruction -> . for_stmt
    (11) instruction -> . while_stmt
    (12) instruction -> . if_stmt
    (13) instruction -> . assignment
    (33) expr -> . SUB expr
    (34) expr -> . ONES ( expr_list )
    (35) expr -> . ZEROS ( expr_list )
    (36) expr -> . EYE ( expr_list )
    (37) expr -> . expr '
    (38) expr -> . matrix
    (39) expr -> . STRING
    (40) expr -> . FLOAT
    (41) expr -> . INTNUM
    (42) expr -> . ID
    (43) expr -> . ( expr )
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr DOTDIV expr
    (51) expr -> . expr DOTMUL expr
    (52) expr -> . expr DOTSUB expr
    (53) expr -> . expr DOTADD expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . expr MUL expr
    (56) expr -> . expr SUB expr
    (57) expr -> . expr ADD expr
    (24) block_stmt -> . { instructions }
    (25) print_stmt -> . PRINT expr_list ;
    (14) flow_stmt -> . RETURN expr ;
    (15) flow_stmt -> . RETURN ;
    (16) flow_stmt -> . CONTINUE ;
    (17) flow_stmt -> . BREAK ;
    (23) for_stmt -> . FOR ID = for_interval : for_interval instruction
    (20) while_stmt -> . WHILE ( expr ) instruction
    (18) if_stmt -> . IF ( expr ) instruction
    (19) if_stmt -> . IF ( expr ) instruction ELSE instruction
    (26) assignment -> . lvalue DIVASSIGN expr ;
    (27) assignment -> . lvalue MULASSIGN expr ;
    (28) assignment -> . lvalue SUBASSIGN expr ;
    (29) assignment -> . lvalue ADDASSIGN expr ;
    (30) assignment -> . lvalue = expr ;
    (60) matrix -> . [ row_list ]
    (31) lvalue -> . ID [ expr_list ]
    (32) lvalue -> . ID
    $end            reduce using rule 2 (instructions_opt -> .)
    SUB             shift and go to state 13
    ONES            shift and go to state 14
    ZEROS           shift and go to state 16
    EYE             shift and go to state 17
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 22
    (               shift and go to state 15
    {               shift and go to state 23
    PRINT           shift and go to state 24
    RETURN          shift and go to state 25
    CONTINUE        shift and go to state 26
    BREAK           shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    IF              shift and go to state 30
    [               shift and go to state 32

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    expr                           shift and go to state 5
    block_stmt                     shift and go to state 6
    print_stmt                     shift and go to state 7
    flow_stmt                      shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    assignment                     shift and go to state 12
    matrix                         shift and go to state 18
    lvalue                         shift and go to state 31

state 1

    (0) S' -> program .


state 2

    (1) program -> instructions_opt .
    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (6) instruction -> . expr ;
    (7) instruction -> . block_stmt
    (8) instruction -> . print_stmt
    (9) instruction -> . flow_stmt
    (10) instruction -> . for_stmt
    (11) instruction -> . while_stmt
    (12) instruction -> . if_stmt
    (13) instruction -> . assignment
    (33) expr -> . SUB expr
    (34) expr -> . ONES ( expr_list )
    (35) expr -> . ZEROS ( expr_list )
    (36) expr -> . EYE ( expr_list )
    (37) expr -> . expr '
    (38) expr -> . matrix
    (39) expr -> . STRING
    (40) expr -> . FLOAT
    (41) expr -> . INTNUM
    (42) expr -> . ID
    (43) expr -> . ( expr )
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr DOTDIV expr
    (51) expr -> . expr DOTMUL expr
    (52) expr -> . expr DOTSUB expr
    (53) expr -> . expr DOTADD expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . expr MUL expr
    (56) expr -> . expr SUB expr
    (57) expr -> . expr ADD expr
    (24) block_stmt -> . { instructions }
    (25) print_stmt -> . PRINT expr_list ;
    (14) flow_stmt -> . RETURN expr ;
    (15) flow_stmt -> . RETURN ;
    (16) flow_stmt -> . CONTINUE ;
    (17) flow_stmt -> . BREAK ;
    (23) for_stmt -> . FOR ID = for_interval : for_interval instruction
    (20) while_stmt -> . WHILE ( expr ) instruction
    (18) if_stmt -> . IF ( expr ) instruction
    (19) if_stmt -> . IF ( expr ) instruction ELSE instruction
    (26) assignment -> . lvalue DIVASSIGN expr ;
    (27) assignment -> . lvalue MULASSIGN expr ;
    (28) assignment -> . lvalue SUBASSIGN expr ;
    (29) assignment -> . lvalue ADDASSIGN expr ;
    (30) assignment -> . lvalue = expr ;
    (60) matrix -> . [ row_list ]
    (31) lvalue -> . ID [ expr_list ]
    (32) lvalue -> . ID
    $end            reduce using rule 3 (instructions_opt -> instructions .)
    SUB             shift and go to state 13
    ONES            shift and go to state 14
    ZEROS           shift and go to state 16
    EYE             shift and go to state 17
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 22
    (               shift and go to state 15
    {               shift and go to state 23
    PRINT           shift and go to state 24
    RETURN          shift and go to state 25
    CONTINUE        shift and go to state 26
    BREAK           shift and go to state 27
    FOR             shift and go to state 28
    WHILE           shift and go to state 29
    IF              shift and go to state 30
    [               shift and go to state 32

    instruction                    shift and go to state 33
    expr                           shift and go to state 5
    block_stmt                     shift and go to state 6
    print_stmt                     shift and go to state 7
    flow_stmt                      shift and go to state 8
    for_stmt                       shift and go to state 9
    while_stmt                     shift and go to state 10
    if_stmt                        shift and go to state 11
    assignment                     shift and go to state 12
    matrix                         shift and go to state 18
    lvalue                         shift and go to state 31

state 4

    (4) instructions -> instruction .
    SUB             reduce using rule 4 (instructions -> instruction .)
    ONES            reduce using rule 4 (instructions -> instruction .)
    ZEROS           reduce using rule 4 (instructions -> instruction .)
    EYE             reduce using rule 4 (instructions -> instruction .)
    STRING          reduce using rule 4 (instructions -> instruction .)
    FLOAT           reduce using rule 4 (instructions -> instruction .)
    INTNUM          reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    (               reduce using rule 4 (instructions -> instruction .)
    {               reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    [               reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 5

    (6) instruction -> expr . ;
    (37) expr -> expr . '
    (44) expr -> expr . GE expr
    (45) expr -> expr . GT expr
    (46) expr -> expr . LE expr
    (47) expr -> expr . LT expr
    (48) expr -> expr . NE expr
    (49) expr -> expr . EQ expr
    (50) expr -> expr . DOTDIV expr
    (51) expr -> expr . DOTMUL expr
    (52) expr -> expr . DOTSUB expr
    (53) expr -> expr . DOTADD expr
    (54) expr -> expr . DIVIDE expr
    (55) expr -> expr . MUL expr
    (56) expr -> expr . SUB expr
    (57) expr -> expr . ADD expr
    ;               shift and go to state 34
    '               shift and go to state 35
    GE              shift and go to state 36
    GT              shift and go to state 37
    LE              shift and go to state 38
    LT              shift and go to state 39
    NE              shift and go to state 40
    EQ              shift and go to state 41
    DOTDIV          shift and go to state 42
    DOTMUL          shift and go to state 43
    DOTSUB          shift and go to state 44
    DOTADD          shift and go to state 45
    DIVIDE          shift and go to state 46
    MUL             shift and go to state 47
    SUB             shift and go to state 48
    ADD             shift and go to state 49


state 6

    (7) instruction -> block_stmt .
    SUB             reduce using rule 7 (instruction -> block_stmt .)
    ONES            reduce using rule 7 (instruction -> block_stmt .)
    ZEROS           reduce using rule 7 (instruction -> block_stmt .)
    EYE             reduce using rule 7 (instruction -> block_stmt .)
    STRING          reduce using rule 7 (instruction -> block_stmt .)
    FLOAT           reduce using rule 7 (instruction -> block_stmt .)
    INTNUM          reduce using rule 7 (instruction -> block_stmt .)
    ID              reduce using rule 7 (instruction -> block_stmt .)
    (               reduce using rule 7 (instruction -> block_stmt .)
    {               reduce using rule 7 (instruction -> block_stmt .)
    PRINT           reduce using rule 7 (instruction -> block_stmt .)
    RETURN          reduce using rule 7 (instruction -> block_stmt .)
    CONTINUE        reduce using rule 7 (instruction -> block_stmt .)
    BREAK           reduce using rule 7 (instruction -> block_stmt .)
    FOR             reduce using rule 7 (instruction -> block_stmt .)
    WHILE           reduce using rule 7 (instruction -> block_stmt .)
    IF              reduce using rule 7 (instruction -> block_stmt .)
    [               reduce using rule 7 (instruction -> block_stmt .)
    $end            reduce using rule 7 (instruction -> block_stmt .)
    }               reduce using rule 7 (instruction -> block_stmt .)
    ELSE            reduce using rule 7 (instruction -> block_stmt .)


state 7

    (8) instruction -> print_stmt .
    SUB             reduce using rule 8 (instruction -> print_stmt .)
    ONES            reduce using rule 8 (instruction -> print_stmt .)
    ZEROS           reduce using rule 8 (instruction -> print_stmt .)
    EYE             reduce using rule 8 (instruction -> print_stmt .)
    STRING          reduce using rule 8 (instruction -> print_stmt .)
    FLOAT           reduce using rule 8 (instruction -> print_stmt .)
    INTNUM          reduce using rule 8 (instruction -> print_stmt .)
    ID              reduce using rule 8 (instruction -> print_stmt .)
    (               reduce using rule 8 (instruction -> print_stmt .)
    {               reduce using rule 8 (instruction -> print_stmt .)
    PRINT           reduce using rule 8 (instruction -> print_stmt .)
    RETURN          reduce using rule 8 (instruction -> print_stmt .)
    CONTINUE        reduce using rule 8 (instruction -> print_stmt .)
    BREAK           reduce using rule 8 (instruction -> print_stmt .)
    FOR             reduce using rule 8 (instruction -> print_stmt .)
    WHILE           reduce using rule 8 (instruction -> print_stmt .)
    IF              reduce using rule 8 (instruction -> print_stmt .)
    [               reduce using rule 8 (instruction -> print_stmt .)
    $end            reduce using rule 8 (instruction -> print_stmt .)
    }               reduce using rule 8 (instruction -> print_stmt .)
    ELSE            reduce using rule 8 (instruction -> print_stmt .)


state 8

    (9) instruction -> flow_stmt .
    SUB             reduce using rule 9 (instruction -> flow_stmt .)
    ONES            reduce using rule 9 (instruction -> flow_stmt .)
    ZEROS           reduce using rule 9 (instruction -> flow_stmt .)
    EYE             reduce using rule 9 (instruction -> flow_stmt .)
    STRING          reduce using rule 9 (instruction -> flow_stmt .)
    FLOAT           reduce using rule 9 (instruction -> flow_stmt .)
    INTNUM          reduce using rule 9 (instruction -> flow_stmt .)
    ID              reduce using rule 9 (instruction -> flow_stmt .)
    (               reduce using rule 9 (instruction -> flow_stmt .)
    {               reduce using rule 9 (instruction -> flow_stmt .)
    PRINT           reduce using rule 9 (instruction -> flow_stmt .)
    RETURN          reduce using rule 9 (instruction -> flow_stmt .)
    CONTINUE        reduce using rule 9 (instruction -> flow_stmt .)
    BREAK           reduce using rule 9 (instruction -> flow_stmt .)
    FOR             reduce using rule 9 (instruction -> flow_stmt .)
    WHILE           reduce using rule 9 (instruction -> flow_stmt .)
    IF              reduce using rule 9 (instruction -> flow_stmt .)
    [               reduce using rule 9 (instruction -> flow_stmt .)
    $end            reduce using rule 9 (instruction -> flow_stmt .)
    }               reduce using rule 9 (instruction -> flow_stmt .)
    ELSE            reduce using rule 9 (instruction -> flow_stmt .)


state 9

    (10) instruction -> for_stmt .
    SUB             reduce using rule 10 (instruction -> for_stmt .)
    ONES            reduce using rule 10 (instruction -> for_stmt .)
    ZEROS           reduce using rule 10 (instruction -> for_stmt .)
    EYE             reduce using rule 10 (instruction -> for_stmt .)
    STRING          reduce using rule 10 (instruction -> for_stmt .)
    FLOAT           reduce using rule 10 (instruction -> for_stmt .)
    INTNUM          reduce using rule 10 (instruction -> for_stmt .)
    ID              reduce using rule 10 (instruction -> for_stmt .)
    (               reduce using rule 10 (instruction -> for_stmt .)
    {               reduce using rule 10 (instruction -> for_stmt .)
    PRINT           reduce using rule 10 (instruction -> for_stmt .)
    RETURN          reduce using rule 10 (instruction -> for_stmt .)
    CONTINUE        reduce using rule 10 (instruction -> for_stmt .)
    BREAK           reduce using rule 10 (instruction -> for_stmt .)
    FOR             reduce using rule 10 (instruction -> for_stmt .)
    WHILE           reduce using rule 10 (instruction -> for_stmt .)
    IF              reduce using rule 10 (instruction -> for_stmt .)
    [               reduce using rule 10 (instruction -> for_stmt .)
    $end            reduce using rule 10 (instruction -> for_stmt .)
    }               reduce using rule 10 (instruction -> for_stmt .)
    ELSE            reduce using rule 10 (instruction -> for_stmt .)


state 10

    (11) instruction -> while_stmt .
    SUB             reduce using rule 11 (instruction -> while_stmt .)
    ONES            reduce using rule 11 (instruction -> while_stmt .)
    ZEROS           reduce using rule 11 (instruction -> while_stmt .)
    EYE             reduce using rule 11 (instruction -> while_stmt .)
    STRING          reduce using rule 11 (instruction -> while_stmt .)
    FLOAT           reduce using rule 11 (instruction -> while_stmt .)
    INTNUM          reduce using rule 11 (instruction -> while_stmt .)
    ID              reduce using rule 11 (instruction -> while_stmt .)
    (               reduce using rule 11 (instruction -> while_stmt .)
    {               reduce using rule 11 (instruction -> while_stmt .)
    PRINT           reduce using rule 11 (instruction -> while_stmt .)
    RETURN          reduce using rule 11 (instruction -> while_stmt .)
    CONTINUE        reduce using rule 11 (instruction -> while_stmt .)
    BREAK           reduce using rule 11 (instruction -> while_stmt .)
    FOR             reduce using rule 11 (instruction -> while_stmt .)
    WHILE           reduce using rule 11 (instruction -> while_stmt .)
    IF              reduce using rule 11 (instruction -> while_stmt .)
    [               reduce using rule 11 (instruction -> while_stmt .)
    $end            reduce using rule 11 (instruction -> while_stmt .)
    }               reduce using rule 11 (instruction -> while_stmt .)
    ELSE            reduce using rule 11 (instruction -> while_stmt .)


state 11

    (12) instruction -> if_stmt .
    SUB             reduce using rule 12 (instruction -> if_stmt .)
    ONES            reduce using rule 12 (instruction -> if_stmt .)
    ZEROS           reduce using rule 12 (instruction -> if_stmt .)
    EYE             reduce using rule 12 (instruction -> if_stmt .)
    STRING          reduce using rule 12 (instruction -> if_stmt .)
    FLOAT           reduce using rule 12 (instruction -> if_stmt .)
    INTNUM          reduce using rule 12 (instruction -> if_stmt .)
    ID              reduce using rule 12 (instruction -> if_stmt .)
    (               reduce using rule 12 (instruction -> if_stmt .)
    {               reduce using rule 12 (instruction -> if_stmt .)
    PRINT           reduce using rule 12 (instruction -> if_stmt .)
    RETURN          reduce using rule 12 (instruction -> if_stmt .)
    CONTINUE        reduce using rule 12 (instruction -> if_stmt .)
    BREAK           reduce using rule 12 (instruction -> if_stmt .)
    FOR             reduce using rule 12 (instruction -> if_stmt .)
    WHILE           reduce using rule 12 (instruction -> if_stmt .)
    IF              reduce using rule 12 (instruction -> if_stmt .)
    [               reduce using rule 12 (instruction -> if_stmt .)
    $end            reduce using rule 12 (instruction -> if_stmt .)
    }               reduce using rule 12 (instruction -> if_stmt .)
    ELSE            reduce using rule 12 (instruction -> if_stmt .)


state 12

    (13) instruction -> assignment .
    SUB             reduce using rule 13 (instruction -> assignment .)
    ONES            reduce using rule 13 (instruction -> assignment .)
    ZEROS           reduce using rule 13 (instruction -> assignment .)
    EYE             reduce using rule 13 (instruction -> assignment .)
    STRING          reduce using rule 13 (instruction -> assignment .)
    FLOAT           reduce using rule 13 (instruction -> assignment .)
    INTNUM          reduce using rule 13 (instruction -> assignment .)
    ID              reduce using rule 13 (instruction -> assignment .)
    (               reduce using rule 13 (instruction -> assignment .)
    {               reduce using rule 13 (instruction -> assignment .)
    PRINT           reduce using rule 13 (instruction -> assignment .)
    RETURN          reduce using rule 13 (instruction -> assignment .)
    CONTINUE        reduce using rule 13 (instruction -> assignment .)
    BREAK           reduce using rule 13 (instruction -> assignment .)
    FOR             reduce using rule 13 (instruction -> assignment .)
    WHILE           reduce using rule 13 (instruction -> assignment .)
    IF              reduce using rule 13 (instruction -> assignment .)
    [               reduce using rule 13 (instruction -> assignment .)
    $end            reduce using rule 13 (instruction -> assignment .)
    }               reduce using rule 13 (instruction -> assignment .)
    ELSE            reduce using rule 13 (instruction -> assignment .)


state 13

    (33) expr -> SUB . expr
    (33) expr -> . SUB expr
    (34) expr -> . ONES ( expr_list )
    (35) expr -> . ZEROS ( expr_list )
    (36) expr -> . EYE ( expr_list )
    (37) expr -> . expr '
    (38) expr -> . matrix
    (39) expr -> . STRING
    (40) expr -> . FLOAT
    (41) expr -> . INTNUM
    (42) expr -> . ID
    (43) expr -> . ( expr )
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr DOTDIV expr
    (51) expr -> . expr DOTMUL expr
    (52) expr -> . expr DOTSUB expr
    (53) expr -> . expr DOTADD expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . expr MUL expr
    (56) expr -> . expr SUB expr
    (57) expr -> . expr ADD expr
    (60) matrix -> . [ row_list ]
    SUB             shift and go to state 13
    ONES            shift and go to state 14
    ZEROS           shift and go to state 16
    EYE             shift and go to state 17
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 51
    (               shift and go to state 15
    [               shift and go to state 32

    expr                           shift and go to state 50
    matrix                         shift and go to state 18

state 14

    (34) expr -> ONES . ( expr_list )
    (               shift and go to state 52


state 15

    (43) expr -> ( . expr )
    (33) expr -> . SUB expr
    (34) expr -> . ONES ( expr_list )
    (35) expr -> . ZEROS ( expr_list )
    (36) expr -> . EYE ( expr_list )
    (37) expr -> . expr '
    (38) expr -> . matrix
    (39) expr -> . STRING
    (40) expr -> . FLOAT
    (41) expr -> . INTNUM
    (42) expr -> . ID
    (43) expr -> . ( expr )
    (44) expr -> . expr GE expr
    (45) expr -> . expr GT expr
    (46) expr -> . expr LE expr
    (47) expr -> . expr LT expr
    (48) expr -> . expr NE expr
    (49) expr -> . expr EQ expr
    (50) expr -> . expr DOTDIV expr
    (51) expr -> . expr DOTMUL expr
    (52) expr -> . expr DOTSUB expr
    (53) expr -> . expr DOTADD expr
    (54) expr -> . expr DIVIDE expr
    (55) expr -> . expr MUL expr
    (56) expr -> . expr SUB expr
    (57) expr -> . expr ADD expr
    (60) matrix -> . [ row_list ]
    SUB             shift and go to state 13
    ONES            shift and go to state 14
    ZEROS           shift and go to state 16
    EYE             shift and go to state 17
    STRING          shift and go to state 19
    FLOAT           shift and go to state 20
    INTNUM          shift and go to state 21
    ID              shift and go to state 51
    (               shift and go to state 15
    [               shift and go to state 32

    expr                           shift and go to state 53
    matrix                         shift and go to state 18

state 16

    (35) expr -> ZEROS . ( expr_list )
    (               shift and go to state 54


state 17

    (36) expr -> EYE . ( expr_list )
    (               shift and go to state 55


state 18

    (38) expr -> matrix .
    ;               reduce using rule 38 (expr -> matrix .)
    '               reduce using rule 38 (expr -> matrix .)
    GE              reduce using rule 38 (expr -> matrix .)
    GT              reduce using rule 38 (expr -> matrix .)
    LE              reduce using rule 38 (expr -> matrix .)
    LT              reduce using rule 38 (expr -> matrix .)
    NE              reduce using rule 38 (expr -> matrix .)
    EQ              reduce using rule 38 (expr -> matrix .)
    DOTDIV          reduce using rule 38 (expr -> matrix .)
    DOTMUL          reduce using rule 38 (expr -> matrix .)
    DOTSUB          reduce using rule 38 (expr -> matrix .)
    DOTADD          reduce using rule 38 (expr -> matrix .)
    DIVIDE          reduce using rule 38 (expr -> matrix .)
    MUL             reduce using rule 38 (expr -> matrix .)
    SUB             reduce using rule 38 (expr -> matrix .)
    ADD             reduce using rule 38 (expr -> matrix .)
    )               reduce using rule 38 (expr -> matrix .)
    ,               reduce using rule 38 (expr -> matrix .)
    ]               reduce using rule 38 (expr -> matrix .)


state 19

    (39) expr -> STRING .
    ;               reduce using rule 39 (expr -> STRING .)
    '               reduce using rule 39 (expr -> STRING .)
    GE              reduce using rule 39 (expr -> STRING .)
    GT              reduce using rule 39 (expr -> STRING .)
    LE              reduce using rule 39 (expr -> STRING .)
    LT              reduce using rule 39 (expr -> STRING .)
    NE              reduce using rule 39 (expr -> STRING .)
    EQ              reduce using rule 39 (expr -> STRING .)
    DOTDIV          reduce using rule 39 (expr -> STRING .)
    DOTMUL          reduce using rule 39 (expr -> STRING .)
    DOTSUB          reduce using rule 39 (expr -> STRING .)
    DOTADD          reduce using rule 39 (expr -> STRING .)
    DIVIDE          reduce using rule 39 (expr -> STRING .)
    MUL             reduce using rule 39 (expr -> STRING .)
    SUB             reduce using rule 39 (expr -> STRING .)
    ADD             reduce using rule 39 (expr -> STRING .)
    )               reduce using rule 39 (expr -> STRING .)
    ,               reduce using rule 39 (expr -> STRING .)
    ]               reduce using rule 39 (expr -> STRING .)


state 20

    (40) expr -> FLOAT .
    ;               reduce using rule 40 (expr -> FLOAT .)
    '               reduce using rule 40 (expr -> FLOAT .)
    GE              reduce using rule 40 (expr -> FLOAT .)
    GT              reduce using rule 40 (expr -> FLOAT .)
    LE              reduce using rule 40 (expr -> FLOAT .)
    LT              reduce using rule 40 (expr -> FLOAT .)
    NE              reduce using rule 40 (expr -> FLOAT .)
    EQ              reduce using rule 40 (expr -> FLOAT .)
    DOTDIV          reduce using rule 40 (expr -> FLOAT .)
    DOTMUL          reduce using rule 40 (expr -> FLOAT .)
    DOTSUB          reduce using rule 40 (expr -> FLOAT .)
    DOTADD          reduce using rule 40 (expr -> FLOAT .)
    DIVIDE          reduce using rule 40 (expr -> FLOAT .)
    MUL             reduce using rule 40 (expr -> FLOAT .)
    SUB             reduce using rule 40 (expr -> FLOAT .)
    ADD             reduce using rule 40 (expr -> FLOAT .)
    )               reduce using rule 40 (expr -> FLOAT .)
    ,               reduce using rule 40 (expr -> FLOAT .)
    ]               reduce using rule 40 (expr -> FLOAT .)


state 21

    (41) expr -> INTNUM .
    ;               reduce using rule 41 (expr -> INTNUM .)
    '               reduce using rule 41 (expr -> INTNUM .)
    GE              reduce using rule 41 (expr -> INTNUM .)
    GT              reduce using rule 41 (expr -> INTNUM .)
    LE              reduce using rule 41 (expr -> INTNUM .)
    LT              reduce using rule 41 (expr -> INTNUM .)
    NE              reduce using rule 41 (expr -> INTNUM .)
    EQ              reduce using rule 41 (expr -> INTNUM .)
    DOTDIV          reduce using rule 41 (expr -> INTNUM .)
    DOTMUL          reduce using rule 41 (expr -> INTNUM .)
    DOTSUB          reduce using rule 41 (expr -> INTNUM .)
    DOTADD          reduce using rule 41 (expr -> INTNUM .)
    DIVIDE          reduce using rule 41 (expr -> INTNUM .)
    MUL             reduce using rule 41 (expr -> INTNUM .)
    SUB             reduce using rule 41 (expr -> INTNUM .)
    ADD             reduce using rule 41 (expr -> INTNUM .)
    )               reduce using rule 41 (expr -> INTNUM .)
    ,               reduce using rule 41 (expr -> INTNUM .)
    ]               reduce using rule 41 (expr -> INTNUM .)


state 22

    (42) expr -> ID .
    (31) lvalue -> ID . [ expr_list ]
    (32) lvalue -> ID .
    ;               reduce using rule 42 (expr -> ID .)
    '               reduce using rule 42 (expr -> ID .)
    GE              reduce using rule 42 (expr -> ID .)
    GT              reduce using rule 42 (expr -> ID .)
    LE              reduce using rule 42 (expr -> ID .)
    LT              reduce using rule 42 (expr -> ID .)
    NE              reduce using rule 42 (expr -> ID .)
    EQ              reduce using rule 42 (expr -> ID .)
    DOTDIV          reduce using rule 42 (expr -> ID .)
    DOTMUL          reduce using rule 42 (expr -> ID .)
    DOTSUB          reduce using rule 42 (expr -> ID .)
    DOTADD          reduce using rule 42 (expr -> ID .)
    DIVIDE          reduce using rule 42 (expr -> ID .)
    MUL             reduce using rule 42 (expr -> ID .)
    SUB             reduce using rule 42 (expr -> ID .)
    ADD             reduce using rule 42 (expr -> ID .)
    [               shift and go to state 56
    DIVASSIGN       reduce using rule 32 (lvalue -> ID .)
    MULASSIGN       reduce using rule 32 (lvalue -> ID .)
    SUBASSIGN       reduce using rule 32 (lvalue -> ID .)
    ADDASSIGN       reduce using rule 32 (lvalue -> ID .)
    =               reduce using rule 32 (lvalue -> ID .)


state 23
